Fix for SVG Icons in Buttons
Removes a bit of extra space below each icon.

--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,8 @@ label:hover svg {
 	right: 0;
 	top: 0;
 }
+
+
+svg {
+	display: block;
+}
